# fasterPython

./: README.md  __init__.py  fastPython.py  pyproject.toml  test_fastpython.py
AI/Google_Gemini/: Fast_Gemini_API.py
AI/OpenAI/: Agent-openai.py  OpenAI_resp_test.py  fast-OpenAI-API.py  fastestResponseAPI  fastestResponseAPI.py  fastestResponsesAPI.py
AI/Tensorflow/: data-optimization.py
AI/Transformer/: transformer.py
AI/anthropic/: Fast-Claude-api.py
Data_science/: README.md  numpy.py
fasterPython/: README.md  __init__.py  fasterPython.py  test_fastpython.py
functions/: String_concatenation.py  compute_squares.py  fast_Bubble_Sort.py  fib_fast.py  list_comprehesion.py  set.py  sum_fast.py  sum_numpy.py
functions/sum_numpy/: sum_numpy_fast.py
math/: Readme.md  arithmetic.py  fast-sqrt.py
