[project]
name = "fastPython"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "This is the official GitHub repository for FastPython. FastPython is a project dedicated to improving Python’s performance through practical, drop-in code patterns and optimization techniques. The goal is simple: help Python run faster without sacrificing readability."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/fastPython_math"
Issues = "https://github.com/pypa/fastPython_math/issues"